SoPra:  - CellEditoren fertiggestellt  - Ein Fractional kann jetzt auch aus einem Double, welcher als String gespeichert ist, erstellt werden  - BugFix: Fehlerhafte Übergabe des Dateinamens zum Speichern korrigiert  - BugFix: Doppellte Quotes beim Speichern der Operatoren entfernt  - BugFix: NullPointer im ActionHandler abgefangen  - Vorbereitung auf Version 0.5 (voraussichtlicher Termin: 10.11.2007)